# haskell_cac_client

./: .gitignore  CHANGELOG.md  Jenkinsfile  cabal.project  flake.nix  haskell-cac.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/: Main.hs  default.nix  haskell-cac.cabal
haskell/Client/: Main.hs
rust/cac_client/: Cargo.toml  default.nix
rust/cac_client/src/: lib.rs  superposition_client.rs  types.rs
