cabal-version:      3.0
name:               haskell-cac

version:            0.1.0.0

license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Client.Main

    build-depends:    
        base >=4.13.0.0
        , text
        , aeson
        , unordered-containers
        , bytestring
    
    extra-libraries: cac_client 
    -- Directories containing source files.
    -- Base language which the package is written in.
    default-language: Haskell2010

executable haskell-cac
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base >=4.13.0.0
        , text
        , aeson
        , unordered-containers
        , bytestring
    ghc-options: -threaded -rtsopts
    
    extra-libraries: cac_client 
    -- Directories containing source files.
    -- Base language which the package is written in.
    default-language: Haskell2010
